--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <title>deck-of-cards</title>
   </head>
   <body>
-    <div class="container">
-      <div class="jumbotron">
-        <h3>Click one of the cards to see more</h3>
-        <hr>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4 text-uppercase">deck of cards</h1>
+        <p class="lead">Click one of them to see more cards</p>
       </div>
+    </div>
+    <div class="container">
       <div class="club">
         <div class="row">
           <div class="col-12 text-center">
